# testes-geracao-embeddings

./: .gitignore  embeddings.py  output.json  output.txt  pyproject.toml
