[project]
name = "testes-geracao-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "pandas>=2.2.3",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
]
